# imwa-workshop-2026

./: .gitignore  README.md  environment.yml
.github/workflows/: ci.yml
dependencies/flopy/flopy/: pakbase.py
dependencies/flopy/flopy/discretization/: grid.py  modeltime.py
dependencies/flopy/flopy/mf6/: mfpackage.py
dependencies/flopy/flopy/mf6/data/: mfdataarray.py  mfstructure.py
dependencies/flopy/flopy/modflow/: mfmnw1.py  mfwel.py
dependencies/flopy/flopy/utils/: __init__.py  gridintersect.py  hfb_util.py  util_list.py  voronoi.py
dependencies/mf6rtm/: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
dependencies/mf6rtm/mf6rtm/: __init__.py
dependencies/mf6rtm/mf6rtm/assets/: __init__.py
dependencies/mf6rtm/mf6rtm/config/: __init__.py  config.py  yaml_reader.py
dependencies/mf6rtm/mf6rtm/io/: __init__.py  externalio.py
dependencies/mf6rtm/mf6rtm/mup3d/: __init__.py  base.py
dependencies/mf6rtm/mf6rtm/simulation/: __init__.py  discretization.py  mf6api.py  phreeqcbmi.py  solver.py
dependencies/mf6rtm/mf6rtm/utils/: __init__.py  utils.py
dependencies/pyemu/pyemu/emulators/: __init__.py  base.py  dsi.py  dsiae.py  dsivc.py  gpr.py  lpfa.py  transformers.py
dependencies/pyemu/pyemu/pst/: pst_utils.py
dependencies/pyemu/pyemu/utils/: helpers.py  pst_from.py
tests/: pytest.ini  run_tests.sh  scale_nb.py
tutorial/: 00-dewatering-flow.ipynb  00_gwf.ipynb  01-conservative-transport.ipynb  01_gwt.ipynb  02-reactive-transport.ipynb  03-pstfrom.ipynb  03_pstfrom.ipynb  04-priomc.ipynb  05-ies.ipynb  06-opt.ipynb  herebedragons.py
(+3 files in other folders)
