[metadata]
name = mf6rtm
description = Reactive transport model through MODFLOW 6 and PHREEQCRM
author = Pablo Ortega
author-email = portega@intera.com
license = BSD 3-Clause
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
keywords = MODFLOW, PHREEQCRM, reactive transport, groundwater, hydrology
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: BSD License
    Topic :: Scientific/Engineering :: Hydrology
version = 0.3.2.dev
long_description = file: README.md
long_description_content_type = text/markdown
[options]
packages =
    find:
include_package_data = True

install_requires =
    phreeqcrm
    modflowapi
    flopy
    toml
python_requires = >=3.10

zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=2.0
    mypy>=1.10
    flake8>=3.9
    tox>=3.24
    flaky>=3.8
    jupytext>=1.16.0
    nbconvert>=7.16
    ipykernel>=6.29
docs =
    sphinx
    sphinx_rtd_theme
    myst-parser
    sphinx-autodoc-typehints

[options.package_data]
mf6rtm = py.typed

[flake8]
max-line-length = 160
extend-ignore = E, F

[options.entry_points]
console_scripts =
    mf6rtm = mf6rtm:run_cmd